--- a/webvrcheckout/app/team.html
+++ b/webvrcheckout/app/team.html
@@ -52,7 +52,9 @@
         <!-- Camera + cursor. -->
         <a-entity camera="userHeight: 1.6"
             universal-controls="movementControls: checkpoint"
-            checkpoint-controls="mode: animate">
+            checkpoint-controls="mode: animate"
+            look-controls=""
+            wasd-controls>
             <a-gui-cursor id="cursor"
                 raycaster="interval: 1000; objects: [gui-interactable], [checkpoint], [link]"
                 fuse="true" fuseTimeout="2000"
@@ -61,7 +63,7 @@
             </a-gui-cursor> <!-- /cursor -->
         </a-entity> <!-- /camera -->
 
-      </a-entity>
+      
 
     </a-scene>
 </body>
