--- a/webvrcheckout/app/3dof.html
+++ b/webvrcheckout/app/3dof.html
@@ -37,21 +37,21 @@
 <body>
     <a-scene physics="debug:false; friction: 0.1; restitution: 0.75">
         <a-assets>
-            <img id="6dofThumbnail" src="assets/roomscale.png">
-            <img id="3dofThumbnail" src="assets/equirectangular.jpg">
+            <img id="6dofThumbnail" alt="6dofThumbnail"  src="assets/roomscale2.png">
+            <img id="3dofThumbnail" alt="3dofThumbnail"  src="assets/equirectangular.jpg">
             
-            <img id="prod01" src="assets/product1.png">
-            <img id="prod06" src="assets/product6.png">
+            <img id="prod01" alt="prod01" src="assets/product1.png">
+            <img id="prod06" alt="prod06" src="assets/product6.png">
 
-            <img id="cart1" src="assets/cart1.png">
-            <img id="cart2" src="assets/cart2.png">
-            <img id="cart3" src="assets/cart3.png">
-            <img id="cart4" src="assets/cart4.png">
+            <img id="cart1" alt="cart1" src="assets/cart1.png">
+            <img id="cart2" alt="cart1" src="assets/cart2.png">
+            <img id="cart3" alt="cart1" src="assets/cart3a.png">
+            <img id="cart4" alt="cart1" src="assets/cart4.png">
 
             <a-mixin id="grid" geometry="primitive:plane; width: 25; height: 25" rotation="-90 0 0" material="src:assets/grid.png; repeat:25 25"></a-mixin>
         </a-assets>
 
-        <a-entity lookAt="[camera]" link="href: index.html; title: Roomscale Store; image: #6dofThumbnail"
+        <a-entity lookAt="[camera]" link="href: index.html; title: Space Mall; image: #6dofThumbnail"
             position="4 1 5"
             rotation="0 40 0 "
         ></a-entity>
