Forcing VR mode on pages.

--- a/webvrcheckout/app/3dof.html
+++ b/webvrcheckout/app/3dof.html
@@ -35,7 +35,7 @@
 </head>
 
 <body>
-    <a-scene physics="debug:false; friction: 0.1; restitution: 0.75">
+    <a-scene physics="debug:false; friction: 0.1; restitution: 0.75" auto-enter-vr>
         <a-assets>
             <img id="6dofThumbnail" alt="6dofThumbnail"  src="assets/roomscale2.png">
             <img id="3dofThumbnail" alt="3dofThumbnail"  src="assets/equirectangular.jpg">
