--- a/webvrcheckout/app/index.html
+++ b/webvrcheckout/app/index.html
@@ -35,7 +35,7 @@
 </head>
 
 <body>
-    <a-scene>
+    <a-scene auto-enter-vr>
         <a-assets>
             <img id="sky" src="assets/stars.jpg">
             <img id="teamThumbnail" src="assets/team.jpg">
