--- a/webvrcheckout/app/index.html
+++ b/webvrcheckout/app/index.html
@@ -114,14 +114,14 @@
         <a-entity gui-interactable="clickAction:test" gui-item="" product="texture:saturn.jpg; specs:planet, unlivable; productName:Saturn;" position="1.35 0.85 -4.75"
         ><a-ring radius-inner="0.215" radius-outer="0.24" color="#fff" material="opacity:0.75" rotation="30 30 0"></a-ring>
         </a-entity>
-        <a-entity gui-interactable="clickAction:test" gui-item="" product="texture:sun.jpg; specs:unlivable; productName:Sun;" position="1.35 0.85 -5.75"
+        <a-entity gui-interactable="clickAction:test" gui-item="" product="texture:sun.jpg; specs:unlivable and very hot; productName:Sun;" position="1.35 0.85 -5.75"
         ></a-entity>
  
         <a-entity gui-interactable="clickAction:test" gui-item="" product="texture:earth.jpg; specs:planet, livable; productName:Earth;" position="2.35 1.4 -1.75"
         ></a-entity> 
         <a-entity gui-interactable="clickAction:test" gui-item="" product="texture:eris.jpg; specs:unlivable; productName:Eris;" position="2.35 1.4 -2.75"
         ></a-entity> 
-        <a-entity gui-interactable="clickAction:test" gui-item="" product="texture:venus.jpg; specs:planet, unlivable; productName:Venus;" position="2.35 1.4 -3.75"
+        <a-entity gui-interactable="clickAction:test" gui-item="" product="texture:mars.jpg; specs:planet, soon to be livable; productName:Mars;" position="2.35 1.4 -3.75"
         ></a-entity>
         <a-entity gui-interactable="clickAction:test" gui-item="" product="texture:mercury.jpg; specs:planet, unlivable; productName:Mercury;" position="2.35 1.4 -4.75"
         ></a-entity>
@@ -134,7 +134,7 @@
         ></a-entity> 
         <a-entity gui-interactable="clickAction:test" gui-item="" product="texture:saturn.jpg; specs:palnet, unlivable; productName:Saturn;" position="2.65 0.85 -3.75"
         ><a-ring radius-inner="0.215" radius-outer="0.24" color="#fff" material="opacity:0.75" rotation="30 30 0"></a-ring></a-entity>
-        <a-entity gui-interactable="clickAction:test" gui-item="" product="texture:venus.jpg; specs:unlivable; productName:earth;" position="2.65 0.85 -4.75"
+        <a-entity gui-interactable="clickAction:test" gui-item="" product="texture:exo.jpeg; specs:exoplanet, livable; productName:Exo;" position="2.65 0.85 -4.75"
         ></a-entity>
         <a-entity gui-interactable="clickAction:test" gui-item="" product="texture:eris.jpg; specs:dwarf planet, unlivable; productName:Eris;" position="2.65 0.85 -5.75"
         ></a-entity>
@@ -143,56 +143,56 @@
         ></a-entity> 
         <a-entity gui-interactable="clickAction:test" gui-item="" product="texture:moon.jpg; specs:satelite, potentially livable; productName:Moon;" position="-1.65 1.4 -2.75"
         ></a-entity> 
-        <a-entity gui-interactable="clickAction:test" gui-item="" product="texture:venus.jpg; specs:unlivable; productName:earth;" position="-1.65 1.4 -3.75"
+        <a-entity gui-interactable="clickAction:test" gui-item="" product="texture:mars.jpg; specs:planet, soon to be livable; productName:Mars;" position="-1.65 1.4 -3.75"
         ></a-entity>
-        <a-entity gui-interactable="clickAction:test" gui-item="" product="texture:venus.jpg; specs:unlivable; productName:earth;" position="-1.65 1.4 -4.75"
+        <a-entity gui-interactable="clickAction:test" gui-item="" product="texture:exo.jpeg; specs:exoplanet, livable; productName:Exoplanet;" position="-1.65 1.4 -4.75"
         ></a-entity>
-        <a-entity gui-interactable="clickAction:test" gui-item="" product="texture:venus.jpg; specs:unlivable; productName:earth;" position="-1.65 1.4 -5.75"
-        ></a-entity>
-
-        <a-entity gui-interactable="clickAction:test" gui-item="" product="texture:venus.jpg; specs:unlivable; productName:earth;" position="-1.35 0.85 -1.75"
-        ></a-entity> 
-        <a-entity gui-interactable="clickAction:test" gui-item="" product="texture:venus.jpg; specs:unlivable; productName:earth;" position="-1.35 0.85 -2.75"
-        ></a-entity> 
-        <a-entity gui-interactable="clickAction:test" gui-item="" product="texture:venus.jpg; specs:unlivable; productName:earth;" position="-1.35 0.85 -3.75"
-        ></a-entity>
-        <a-entity gui-interactable="clickAction:test" gui-item="" product="texture:venus.jpg; specs:unlivable; productName:earth;" position="-1.35 0.85 -4.75"
-        ></a-entity>
-        <a-entity gui-interactable="clickAction:test" gui-item="" product="texture:venus.jpg; specs:unlivable; productName:earth;" position="-1.35 0.85 -5.75"
+        <a-entity gui-interactable="clickAction:test" gui-item="" product="texture:venus.jpg; specs:unlivable; productName:Venus;" position="-1.65 1.4 -5.75"
         ></a-entity>
 
+		<a-entity gui-interactable="clickAction:test" gui-item="" product="texture:neptune.jpg; specs:planet, unlivable; productName:Neptune;" position="-1.35 0.85 -1.75"
+        ></a-entity> 
+        <a-entity gui-interactable="clickAction:test" gui-item="" product="texture:mars.jpg; specs:planet, unlivable; productName:Mars;" position="-1.35 0.85 -2.75"
+        ></a-entity> 
+        <a-entity gui-interactable="clickAction:test" gui-item="" product="texture:saturn.jpg; specs:palnet, soon to be livable; productName:Saturn;" position="-1.35 0.85 -3.75"
+        ><a-ring radius-inner="0.215" radius-outer="0.24" color="#fff" material="opacity:0.75" rotation="30 30 0"></a-ring></a-entity>
+        <a-entity gui-interactable="clickAction:test" gui-item="" product="texture:earth.jpg; specs:planet, livable; productName:Earth;" position="-1.35 0.85 -4.75"
+        ></a-entity>
+        <a-entity gui-interactable="clickAction:test" gui-item="" product="texture:eris.jpg; specs:dwarf planet, unlivable; productName:Eris;" position="-1.35 0.85 -5.75"
+        ></a-entity>
 
-        <a-entity gui-interactable="clickAction:test" gui-item="" product="texture:venus.jpg; specs:unlivable; productName:earth;" position="-1.65 1.4 -1.75"
+		<a-entity gui-interactable="clickAction:test" gui-item="" product="texture:earth.jpg; specs:planet, livable; productName:Earth;" position="-1.65 1.4 -1.75"
         ></a-entity> 
-        <a-entity gui-interactable="clickAction:test" gui-item="" product="texture:venus.jpg; specs:unlivable; productName:earth;" position="-1.65 1.4 -2.75"
+        <a-entity gui-interactable="clickAction:test" gui-item="" product="texture:eris.jpg; specs:unlivable; productName:Eris;" position="-1.65 1.4 -2.75"
         ></a-entity> 
-        <a-entity gui-interactable="clickAction:test" gui-item="" product="texture:venus.jpg; specs:unlivable; productName:earth;" position="-1.65 1.4 -3.75"
+        <a-entity gui-interactable="clickAction:test" gui-item="" product="texture:venus.jpg; specs:planet, unlivable; productName:Venus;" position="-1.65 1.4 -3.75"
         ></a-entity>
-        <a-entity gui-interactable="clickAction:test" gui-item="" product="texture:venus.jpg; specs:unlivable; productName:earth;" position="-1.65 1.4 -4.75"
+        <a-entity gui-interactable="clickAction:test" gui-item="" product="texture:mercury.jpg; specs:planet, unlivable; productName:Mercury;" position="-1.65 1.4 -4.75"
         ></a-entity>
-        <a-entity gui-interactable="clickAction:test" gui-item="" product="texture:venus.jpg; specs:unlivable; productName:earth;" position="-1.65 1.4 -5.75"
+        <a-entity gui-interactable="clickAction:test" gui-item="" product="texture:haumea.jpg; specs:dwarf planet, unlivable; productName:Haumea;" position="-1.65 1.4 -5.75"
         ></a-entity>
-
-        <a-entity gui-interactable="clickAction:test" gui-item="" product="texture:venus.jpg; specs:unlivable; productName:earth;" position="-2.65 0.85 -1.75"
+        
+ 		<a-entity gui-interactable="clickAction:test" gui-item="" product="texture:mercury.jpg; specs:planet, unlivable; productName:Mercury;" position="-2.65 0.85 -1.75"
         ></a-entity> 
-        <a-entity gui-interactable="clickAction:test" gui-item="" product="texture:venus.jpg; specs:unlivable; productName:earth;" position="-2.65 0.85 -2.75"
+        <a-entity gui-interactable="clickAction:test" gui-item="" product="texture:moon.jpg; specs:satelite, potentially livable; productName:Moon;" position="-2.65 0.85 -2.75"
         ></a-entity> 
-        <a-entity gui-interactable="clickAction:test" gui-item="" product="texture:venus.jpg; specs:unlivable; productName:earth;" position="-2.65 0.85 -3.75"
+        <a-entity gui-interactable="clickAction:test" gui-item="" product="texture:neptune.jpg; specs:planet, unlivable; productName:Neptune;" position="-2.65 0.85 -3.75"
         ></a-entity>
-        <a-entity gui-interactable="clickAction:test" gui-item="" product="texture:venus.jpg; specs:unlivable; productName:earth;" position="-2.65 0.85 -4.75"
+        <a-entity gui-interactable="clickAction:test" gui-item="" product="texture:saturn.jpg; specs:planet, unlivable; productName:Saturn;" position="-2.65 0.85 -4.75"
+        ><a-ring radius-inner="0.215" radius-outer="0.24" color="#fff" material="opacity:0.75" rotation="30 30 0"></a-ring>
+        </a-entity>
+        <a-entity gui-interactable="clickAction:test" gui-item="" product="texture:sun.jpg; specs:unlivable; productName:Sun;" position="-2.65 0.85 -5.75"
         ></a-entity>
-        <a-entity gui-interactable="clickAction:test" gui-item="" product="texture:venus.jpg; specs:unlivable; productName:earth;" position="-2.65 0.85 -5.75"
-        ></a-entity>
- 
-        <a-entity gui-interactable="clickAction:test" gui-item="" product="texture:venus.jpg; specs:unlivable; productName:earth;" position="-2.35 1.4 -1.75"
+        
+        <a-entity gui-interactable="clickAction:test" gui-item="" product="texture:ceres.jpg; specs:dwarf planet, potentially livable; productName:Ceres;" position="-2.35 1.4 -1.75"
         ></a-entity> 
-        <a-entity gui-interactable="clickAction:test" gui-item="" product="texture:venus.jpg; specs:unlivable; productName:earth;" position="-2.35 1.4 -2.75"
+        <a-entity gui-interactable="clickAction:test" gui-item="" product="texture:earth.jpg; specs:planet, very livable; productName:Earth;" position="-2.35 1.4 -2.75"
         ></a-entity> 
-        <a-entity gui-interactable="clickAction:test" gui-item="" product="texture:venus.jpg; specs:unlivable; productName:earth;" position="-2.35 1.4 -3.75"
+         <a-entity gui-interactable="clickAction:test" gui-item="" product="texture:venus.jpg; specs:planet, unlivable; productName:Venus;" position="-2.35 1.4 -3.75"
         ></a-entity>
-        <a-entity gui-interactable="clickAction:test" gui-item="" product="texture:venus.jpg; specs:unlivable; productName:earth;" position="-2.35 1.4 -4.75"
+        <a-entity gui-interactable="clickAction:test" gui-item="" product="texture:eris.jpg; specs:dwarf planet, unlivable; productName:Eris;" position="-2.35 1.4 -4.75"
         ></a-entity>
-        <a-entity gui-interactable="clickAction:test" gui-item="" product="texture:venus.jpg; specs:unlivable; productName:earth;" position="-2.35 1.4 -5.75"
+         <a-entity gui-interactable="clickAction:test" gui-item="" product="texture:haumea.jpg; specs:dwarf planet, unlivable; productName:Haumea;" position="-2.35 1.4 -5.75"
         ></a-entity>
         <!-- end Items -->
         <!-- Grid -->
