--- a/resume.html
+++ b/resume.html
@@ -153,6 +153,8 @@
         <li>Conferences, workshops, hackathons, and training sessions I've attended
             <dl>
                 <dt></dt>
+                <dd>- <a href="https://cgiu.org" target="_blank">Clinton Global Initiative Codeathon @Northeastern</a>, Oct 2017 (Boston, MA)</dd>
+                <dd>- <a href="https://realityvirtuallyhack.com" target="_blank">Reality Virtually Hack @ MIT</a>, Oct 2017 (Cambridge, MA) - <a href="./webvrcheckout/app" target="_blank">WebVR Checkout</a></dd>
                 <dd>- <a href="https://help.salesforce.com/HTTrainingCourseDetail?id=a2330000000Q4Ok" target="_blank">Visualforce Training (DEV450)</a>, Sep 2017 (Burlington, MA)</dd>
                 <dd>- <a href="https://www.meetup.com/hacking-for-good-2017/events/239012327/" target="_blank">Hacking for Good @ HBS</a>, Jun 2017 (Boston, MA)</dd>
                 <dd>- <a href="https://informaticaworld.com" target="_blank">Informatica World</a>, May 2017 (San Francisco, CA)</dd>
@@ -191,7 +193,7 @@
     
     <p id="fin">
         <a href="https://manokhinv.github.io/" target="_blank">http://<i class="em em-fr"></i>.tk</a> » resume<br>
-        Updated 9/2017
+        Updated 10/2017
     </p>
 	<script>
 		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
