Removed WIT blog link (dead).

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                             </div>
                             <div class="item">
                                 <h3 class="title"><i class="fa fa-graduation-cap"></i> BSc in Computer Science, 3.82/4</h3>
-                                <h4 class="university"><a href="http://blogs.wit.edu/manokhinv" target="_blank" class="undotted-link"><img src="https://www.google.com/s2/favicons?domain=wit.edu" alt="WIT">  Wentworth Institute of Technology <span class="year">(2011-2014)</span></a></h4>
+                                <h4 class="university"><a href="http://wit.edu/" target="_blank" class="undotted-link"><img src="https://www.google.com/s2/favicons?domain=wit.edu" alt="WIT">  Wentworth Institute of Technology <span class="year">(2011-2014)</span></a></h4>
                             </div>
                             <div class="item">
                                 <h3 class="title"><i class="fa fa-graduation-cap"></i> BSc/MSc in Software Development - transferred out</h3>
