--- a/resume.html
+++ b/resume.html
@@ -131,7 +131,7 @@
                 <dd>- Dean's List (2011-2014); Graduated with honors: <i>magna cum laude;</i></dd>
                 <dd>- Alternative Spring Break 2012 <a href="https://www.wit.edu/news/alternative-spring-break-2012" target="_blank">volunteer</a>;</dd>
                 <dd>- Wentworth Community Scholarship, Wentworth Merit Scholarship, and Wentworth Annual Award recipient; Tau Alpha Pi Honor Society member;</dd>
-                <dd>- Wentworth Admissions Office: <a href="http://blogs.wit.edu/manokhinv/" target="_blank">Admissions Blogger</a>;</dd>
+                <dd>- Wentworth Admissions Office: Admissions Blogger;</dd>
                 <dd>- Wentworth Career Services: Created <a href="http://myweb.wit.edu/coopmap/" target="_blank">Interactive Map of Recent Co-op Employers</a> as a part of COMP650: Senior Project with Prof. Durga Suresh;</dd>
                 <dd>- Wentworth Teaching and Learning Center: Created <a href="http://myweb.wit.edu/courseaid/" target="_blank">CourseAid Web Aggregator</a> as a part of COMP 566: Software Design and Development with Prof. Durga Suresh.</dd>
                 <dd>- Wentworth Accelerate <a href="http://blogs.wit.edu/accelerate/ideas/previous-teams/" target="_blank">Summer 2014 participant</a>.</dd>
