--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                     <div class="section-inner">
                         <h2 class="heading">About Me</h2>
                         <div class="content">
-                            <p>I am Vadim, an App Dev by day and an MBA student by night at <a href="http://bab.sn/mba" target="_blank">Babson</a>. I am passionate about engineering, finance, innovation, investments, and all things technology. I have a degree in Comp Sci and Applied Math from <a href="http://blogs.wit.edu/manokhinv" target="_blank">WIT</a>. I constantly strive to pair up my technical background with an entrepreneurial mindset to build something <a href="./25" class="undotted-link" style="color:#49515a">awe</a>some. Outside of my day to day duties I ride my bike, write and play music, read about FI/RE and investing, and generally try to expand my horizons.</p>
+                            <p>I am Vadim, an App Dev by day and an MBA student by night at <a href="http://bab.sn/mba" target="_blank">Babson</a>. I am passionate about engineering, finance, innovation, investments, and all things technology. I have a degree in Comp Sci and Applied Math from <a href="http://wit.edu" target="_blank">WIT</a>. I constantly strive to pair up my technical background with an entrepreneurial mindset to build something <a href="./25" class="undotted-link" style="color:#49515a">awe</a>some. Outside of my day to day duties I ride my bike, write and play music, read about FI/RE and investing, and generally try to expand my horizons.</p>
                         </div>
                     </div>                
                 </section>
