Changed February to Feb in the last section.

--- a/resume.html
+++ b/resume.html
@@ -83,7 +83,7 @@
                 <dt>Application Developer, <span>Apr 2014 - Present</span></dt>
                 <dd>- Design, develop, and support complex dynamic cross-browser web applications using ACF/Fusebox, APEX/VF/SOQL (SFDC), PHP/Drupal, C#/.NET, JS/CSS along with their popular frameworks/libraries in production systems while handling a growing number of requests, users, and functionalities;</dd>
                 <dd>- Create enterprise-scale integration solutions for a variety of systems using SOAP and RESTful web services, APIs, ETL tools, MS SQL Server;</dd>
-                <dd>- Work with, use, and help configure Salesforce.com (Sales/HEDA cloud), Informatica, Workday, JIRA, SharePoint, Neoload and other technologies.</dd>
+                <dd>- Work with, use, write integrations to/from, and help configure Salesforce.com (Sales/HEDA Cloud), Informatica (ICS, DI, APIs), Workday (HCM, Financials), JIRA (on prem), SharePoint, Neoload and other technologies.</dd>
                 
                 <dt class="projects">Recent projects:</dt>
                 <dd>- Designing and implementing a cutting edge <a href="http://connector.babson.edu" target="_blank">SFDC alumni engagement platform</a> that serves a community of over 40,000 Babson alumni around the world;</dd>
@@ -154,7 +154,7 @@
             <dl>
                 <dt></dt>
                 <dd>- <a href="https://www.babsonfinanceconference.com/" target="_blank">Babson Finance Conference</a> - The Future of FinTech, Mar 2018 (Boston, MA)</dd>
-                <dd>- Lubrizol Design Thinking, February 2018 (Wellelsey, MA);</dd>
+                <dd>- Lubrizol Design Thinking Challenge, Feb 2018 (Wellelsey, MA);</dd>
                 <dd>- <a href="https://terminalfour.com/training" target="_blank">TERMINALFOUR Advanced Web Developer</a> 3-day onsite training, Jan 2018 (Wellesley, MA)</dd>
                 <dd>- <a href="https://cgiu.org" target="_blank">Clinton Global Initiative Codeathon @Northeastern</a>, Oct 2017 (Boston, MA)</dd>
                 <dd>- <a href="https://realityvirtuallyhack.com" target="_blank">Reality Virtually Hack @ MIT</a>, Oct 2017 (Cambridge, MA) - <a href="./webvrcheckout/app" target="_blank">WebVR Checkout</a></dd>
