--- a/index.html
+++ b/index.html
@@ -107,9 +107,13 @@
                     <div class="section-inner">
                         <h2 class="heading"><a href="resume.html#edu" target="_blank">Education</a></h2>
                         <div class="content">
+                        	<div class="item">                      
+                                <h3 class="title"><i class="fa fa-graduation-cap"></i> MSc in Business Analytics - in progress</h3>
+                                <h4 class="university"><a href="http://bab.sn/msba" target="_blank" class="undotted-link"><img src="https://www.google.com/s2/favicons?domain=bab.sn" alt="Babson">  Babson College <span class="year">(2018-2019)</span></a></h4>
+                            </div>
                             <div class="item">                      
-                                <h3 class="title"><i class="fa fa-graduation-cap"></i> Master of Business Administration (MBA) - in progress</h3>
-                                <h4 class="university"><a href="http://bab.sn/givenow" target="_blank" class="undotted-link"><img src="https://www.google.com/s2/favicons?domain=bab.sn" alt="Babson">  Babson College <span class="year">(2016-2019)</span></a></h4>
+                                <h3 class="title"><i class="fa fa-graduation-cap"></i> Master of Business Administration (MBA) </h3>
+                                <h4 class="university"><a href="http://bab.sn/mba" target="_blank" class="undotted-link"><img src="https://www.google.com/s2/favicons?domain=bab.sn" alt="Babson">  Babson College <span class="year">(2016-2018)</span></a></h4>
                             </div>
                             <div class="item">
                                 <h3 class="title"><i class="fa fa-graduation-cap"></i> BSc in Computer Science, 3.82/4</h3>
