--- a/resume.html
+++ b/resume.html
@@ -120,7 +120,13 @@
     <ul>
     	<li><strong>Babson College, Babson Park, MA</strong>
             <dl>
-                <dt>Masters of Science in Business Administration <span>May 2016 - present</span></dt>
+                <dt>Masters of Science in Business Analytics <span>Sep 2018 - present</span></dt>
+            </dl>
+        </li>
+        
+    	<li><strong>Babson College, Babson Park, MA</strong>
+            <dl>
+                <dt>Master of Business Administration <span>May 2016 - Aug 2018</span></dt>
                 <dd>- Business Analytics concentration</dd>
             </dl>
         </li>
@@ -186,7 +192,8 @@
                 <dt></dt>
                 <dd>- I've been a member of &Tau;&Alpha;&Pi; (<a href="http://taualphapi.org/" target="_blank">Tau Alpha Pi</a>, Massachusetts Alpha Chapter) - the professional honor society for engineering technology - since 2013.</dd>
                 <dd>- Occasionally, I participate in the local Boston technology meetups, hackathons, and user group activities such as <a href="https://www.meetup.com/Boston_New_Technology/" target="_blank">BNT</a> (Boston New Technology), <a href="http://aug.atlassian.com/cities/bostonma" target="_blank">Boston AUG</a> (Atlassian User Group), <a href="http://codeforboston.org/" target="_blank">Code for Boston</a> Hack Nights, and others.</dd>
-                <dd>- Outside of my day to day duties as a developer I enjoy cycling, creating and playing music, learning new things, and generally expanding my horizons.</dd>
+                <dd>- I'm a frequent (<a href="https://kiva.org/" target="_blank">Kiva.org</a> lender.</dd>
+                <dd>- Outside of my day to day duties as a developer I enjoy cycling and running (recently finished a 5k in <a href="https://www.jpmorganchasecc.com/results/search.php?city_id=4" target="_blank">under 20 minutes</a> - woohoo!), creating and playing <a href="https://w.soundcloud.com/player/?url=https://api.soundcloud.com/tracks/128106485&secret_token=s-uRVsi" target="_blank">music</a>, learning new things, and generally expanding my horizons.</dd>
             </dl>
         </li>
  
@@ -195,7 +202,7 @@
     
     <p id="fin">
         <a href="https://manokhinv.github.io/" target="_blank">http://manokhinv.github.io</a> » resume<br>
-        Updated 3/2018
+        Updated 7/2018
     </p>
 	<script>
 		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
