--- a/resume.html
+++ b/resume.html
@@ -120,7 +120,7 @@
     <ul>
     	<li><strong>Babson College, Babson Park, MA</strong>
             <dl>
-                <dt>Masters of Science in Business Analytics <span>Sep 2018 - present</span></dt>
+                <dt>Master of Science in Business Analytics <span>Sep 2018 - present</span></dt>
             </dl>
         </li>
         
@@ -192,8 +192,8 @@
                 <dt></dt>
                 <dd>- I've been a member of &Tau;&Alpha;&Pi; (<a href="http://taualphapi.org/" target="_blank">Tau Alpha Pi</a>, Massachusetts Alpha Chapter) - the professional honor society for engineering technology - since 2013.</dd>
                 <dd>- Occasionally, I participate in the local Boston technology meetups, hackathons, and user group activities such as <a href="https://www.meetup.com/Boston_New_Technology/" target="_blank">BNT</a> (Boston New Technology), <a href="http://aug.atlassian.com/cities/bostonma" target="_blank">Boston AUG</a> (Atlassian User Group), <a href="http://codeforboston.org/" target="_blank">Code for Boston</a> Hack Nights, and others.</dd>
-                <dd>- I'm a frequent (<a href="https://kiva.org/" target="_blank">Kiva.org</a> lender.</dd>
-                <dd>- Outside of my day to day duties as a developer I enjoy cycling and running (recently finished a 5k in <a href="https://www.jpmorganchasecc.com/results/search.php?city_id=4" target="_blank">under 20 minutes</a> - woohoo!), creating and playing <a href="https://w.soundcloud.com/player/?url=https://api.soundcloud.com/tracks/128106485&secret_token=s-uRVsi" target="_blank">music</a>, learning new things, and generally expanding my horizons.</dd>
+                <dd>- I'm a frequent <a href="https://kiva.org/" target="_blank">Kiva.org</a> lender and encourage you to become one.</dd>
+                <dd>- Outside of my day to day duties as a developer I enjoy cycling and running (recently finished a 5k in <a href="https://www.jpmorganchasecc.com/results/search.php?city_id=4" target="_blank">under 20 minutes</a> - woohoo!), creating and playing <a href="https://w.soundcloud.com/player/?url=https://api.soundcloud.com/tracks/128106485&secret_token=s-uRVsi" target="_blank">music</a>, learning new things, and generally expanding my <a href="https://i.pinimg.com/736x/05/d9/50/05d950ac03dffd4a9fdac537c08206ab--kapitán-jack-captain-jack.jpg" target="_blank">horizons</a>.</dd>
             </dl>
         </li>
  
