Added a few links, switched mba to msba.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <!-- 
+        PRIVET!
+        
         Responsive HTML5 website template for developers
         
         @template_name: Developer
@@ -84,7 +86,7 @@
                     <div class="section-inner">
                         <h2 class="heading">About Me</h2>
                         <div class="content">
-                            <p>I am Vadim, an App Dev by day and an MBA student by night at <a href="http://bab.sn/mba" target="_blank">Babson</a>. I am passionate about engineering, finance, innovation, investments, and all things technology. I have a degree in Comp Sci and Applied Math from <a href="http://wit.edu" target="_blank">WIT</a>. I constantly strive to pair up my technical background with an entrepreneurial mindset to build something <a href="./25" class="undotted-link" style="color:#49515a">awe</a>some. Outside of my day to day duties I ride my bike, write and play music, read about FI/RE and investing, and generally try to expand my horizons.</p>
+                            <p>I am Vadim, an App Dev by day and an MSBA student by night at <a href="http://bab.sn/msba" target="_blank">Babson</a>. I am passionate about engineering, analytics, innovation, investments, and all things technology. I have a degree in Comp Sci and Applied Math from <a href="http://wit.edu" target="_blank">WIT</a>. I constantly strive to pair up my technical background with an entrepreneurial mindset to build something <a href="./25" class="undotted-link" style="color:#49515a">awe</a>some. Outside of my day to day duties I ride my bike, write and play <a href="https://w.soundcloud.com/player/?url=https://api.soundcloud.com/tracks/128106485&secret_token=s-uRVsi" target="_blank">music</a>, read about FI/RE and investing, and generally try to expand my <a href="https://i.pinimg.com/736x/05/d9/50/05d950ac03dffd4a9fdac537c08206ab--kapitán-jack-captain-jack.jpg" class="undotted-link" style="color:#49515a">horizons</a>.</p>
                         </div>
                     </div>                
                 </section>
@@ -117,7 +119,7 @@
                             </div>
                             <div class="item">
                                 <h3 class="title"><i class="fa fa-graduation-cap"></i> BSc in Computer Science, 3.82/4</h3>
-                                <h4 class="university"><a href="http://wit.edu/" target="_blank" class="undotted-link"><img src="https://www.google.com/s2/favicons?domain=wit.edu" alt="WIT">  Wentworth Institute of Technology <span class="year">(2011-2014)</span></a></h4>
+                                <h4 class="university"><a href="http://wit.edu/" target="_blank" class="undotted-link"><img src="https://www.google.com/s2/favicons?domain=www.wit.edu" alt="WIT">  Wentworth Institute of Technology <span class="year">(2011-2014)</span></a></h4>
                             </div>
                             <div class="item">
                                 <h3 class="title"><i class="fa fa-graduation-cap"></i> BSc/MSc in Software Development - transferred out</h3>
