--- a/resume.html
+++ b/resume.html
@@ -193,7 +193,7 @@
                 <dd>- I've been a member of &Tau;&Alpha;&Pi; (<a href="http://taualphapi.org/" target="_blank">Tau Alpha Pi</a>, Massachusetts Alpha Chapter) - the professional honor society for engineering technology - since 2013.</dd>
                 <dd>- Occasionally, I participate in the local Boston technology meetups, hackathons, and user group activities such as <a href="https://www.meetup.com/Boston_New_Technology/" target="_blank">BNT</a> (Boston New Technology), <a href="http://aug.atlassian.com/cities/bostonma" target="_blank">Boston AUG</a> (Atlassian User Group), <a href="http://codeforboston.org/" target="_blank">Code for Boston</a> Hack Nights, and others.</dd>
                 <dd>- I'm a frequent <a href="https://kiva.org/" target="_blank">Kiva.org</a> lender and encourage you to become one.</dd>
-                <dd>- Outside of my day to day duties as a developer I enjoy cycling and running (recently finished a 5k in <a href="https://www.jpmorganchasecc.com/results/search.php?city_id=4" target="_blank">under 20 minutes</a> - woohoo!), creating and playing <a href="https://w.soundcloud.com/player/?url=https://api.soundcloud.com/tracks/128106485&secret_token=s-uRVsi" target="_blank">music</a>, learning new things, and generally expanding my <a href="https://i.pinimg.com/736x/05/d9/50/05d950ac03dffd4a9fdac537c08206ab--kapitán-jack-captain-jack.jpg" target="_blank">horizons</a>.</dd>
+                <dd>- Outside of my day to day duties as a developer I enjoy cycling and running (recently finished a 5k in <a href="https://www.jpmorganchasecc.com/results/search.php?city_id=4" target="_blank">under 20 minutes</a> - woohoo!), creating and playing <a href="https://w.soundcloud.com/player/?secret_token=s-uRVsi&url=https://api.soundcloud.com/tracks/12810" target="_blank">music</a>, learning new things, and generally expanding my <a href="https://i.pinimg.com/736x/05/d9/50/05d950ac03dffd4a9fdac537c08206ab--kapitán-jack-captain-jack.jpg" target="_blank">horizons</a>.</dd>
             </dl>
         </li>
  
@@ -205,6 +205,11 @@
         Updated 7/2018
     </p>
 	<script>
+		!function(){
+			Array.prototype.sample = function(){return this[Math.floor(Math.random()*this.length)];};
+			document.getElementById('sc').href+=[8639,8242,6485,4603,4473,2268].sample();
+		}();
+		
 		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 		(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
 		m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
