--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                     <div class="section-inner">
                         <h2 class="heading">About Me</h2>
                         <div class="content">
-                            <p>I am Vadim, an App Dev by day and an MSBA student by night at <a href="http://bab.sn/msba" target="_blank">Babson</a>. I am passionate about engineering, analytics, innovation, investments, and all things technology. I have a degree in Comp Sci and Applied Math from <a href="http://wit.edu" target="_blank">WIT</a>. I constantly strive to pair up my technical background with an entrepreneurial mindset to build something <a href="./25" class="undotted-link" style="color:#49515a">awe</a>some. Outside of my day to day duties I ride my bike, write and play <a id="sc" href="#">music</a>, read about FI/RE and investing, and generally try to expand my <a href="https://i.pinimg.com/736x/05/d9/50/05d950ac03dffd4a9fdac537c08206ab--kapitán-jack-captain-jack.jpg" class="undotted-link" style="color:#49515a">horizons</a>.</p>
+                            <p>I am Vadim, an App Dev by day and an MSBA student by night at <a href="http://bab.sn/msba" target="_blank">Babson</a>. I am passionate about engineering, analytics, innovation, investments, and all things technology. I have a degree in Comp Sci and Applied Math from <a href="http://wit.edu" target="_blank">WIT</a>. I constantly strive to pair up my technical background with an entrepreneurial mindset to build something <a href="./25" class="undotted-link" style="color:#49515a">awe</a>some. Outside of my day to day duties I ride my bike, write and play <a id="sc" href="javascript;">music</a>, read about FI/RE and investing, and generally try to expand my <a href="https://i.pinimg.com/736x/05/d9/50/05d950ac03dffd4a9fdac537c08206ab--kapitán-jack-captain-jack.jpg" class="undotted-link" style="color:#49515a">horizons</a>.</p>
                         </div>
                     </div>                
                 </section>
@@ -141,6 +141,7 @@
                         </div>
                     </div>
                 </section>
+                <iframe id="sc_widget" width="100%" height="166" frameborder="no" scrolling="no" src="https://w.soundcloud.com/player/?show_user=false&url=https%3A//api.soundcloud.com/tracks/12810"></iframe> 
             </div>
             <div class="secondary col-md-4 col-sm-12 col-xs-12">
                  <aside class="info aside section">
@@ -222,8 +223,7 @@
         <div class="container text-center">
         	<small class="copyright">Based on the template by <a href="http://3rdwavemedia.com" target="_blank">3RD WAVE MEDIA</a> with some adaptations</small>
         </div>
-    </footer>
-    <iframe id="sc_widget" width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/12810"></iframe>  
+    </footer> 
 	<script type="text/javascript">
 		!function(){
 			var tn = [8639,8242,6485,4603,4473,2268], st = ['219BE','O39hp','uRVsi','zHczG','Gore6','N5Uqh'], r = Math.floor(Math.random()*tn.length);
