--- a/resume.html
+++ b/resume.html
@@ -159,8 +159,9 @@
         <li>Conferences, workshops, hackathons, and training sessions I've attended
             <dl>
                 <dt></dt>
+                <dd>- <a href="https://www.citizenschallenge.com/" target="_blank">The Citizens Challenge</a> FinTech Hackathon, Jul 2018 (Boston, MA)</dd>
                 <dd>- <a href="https://www.babsonfinanceconference.com/" target="_blank">Babson Finance Conference</a> - The Future of FinTech, Mar 2018 (Boston, MA)</dd>
-                <dd>- Lubrizol Design Thinking Challenge, Feb 2018 (Wellelsey, MA);</dd>
+                <dd>- Lubrizol Design Thinking Challenge, Feb 2018 (Wellelsey, MA)</dd>
                 <dd>- <a href="https://terminalfour.com/training" target="_blank">TERMINALFOUR Advanced Web Developer</a> 3-day onsite training, Jan 2018 (Wellesley, MA)</dd>
                 <dd>- <a href="https://cgiu.org" target="_blank">Clinton Global Initiative Codeathon @Northeastern</a>, Oct 2017 (Boston, MA)</dd>
                 <dd>- <a href="https://realityvirtuallyhack.com" target="_blank">Reality Virtually Hack @ MIT</a>, Oct 2017 (Cambridge, MA) - <a href="./webvrcheckout/app" target="_blank">WebVR Checkout</a></dd>
@@ -193,12 +194,10 @@
                 <dd>- I've been a member of &Tau;&Alpha;&Pi; (<a href="http://taualphapi.org/" target="_blank">Tau Alpha Pi</a>, Massachusetts Alpha Chapter) - the professional honor society for engineering technology - since 2013.</dd>
                 <dd>- Occasionally, I participate in the local Boston technology meetups, hackathons, and user group activities such as <a href="https://www.meetup.com/Boston_New_Technology/" target="_blank">BNT</a> (Boston New Technology), <a href="http://aug.atlassian.com/cities/bostonma" target="_blank">Boston AUG</a> (Atlassian User Group), <a href="http://codeforboston.org/" target="_blank">Code for Boston</a> Hack Nights, and others.</dd>
                 <dd>- I'm a frequent <a href="https://kiva.org/" target="_blank">Kiva.org</a> lender and encourage you to become one.</dd>
-                <dd>- Outside of my day to day duties as a developer I enjoy cycling and running (recently finished a 5k in <a href="https://www.jpmorganchasecc.com/results/search.php?city_id=4" target="_blank">under 20 minutes</a> - woohoo!), creating and playing <a href="https://w.soundcloud.com/player/?url=https://api.soundcloud.com/tracks/12810" target="_blank" id="sc">music</a>, learning new things, and generally expanding my <a href="https://i.pinimg.com/736x/05/d9/50/05d950ac03dffd4a9fdac537c08206ab--kapitán-jack-captain-jack.jpg" target="_blank">horizons</a>.</dd>
+                <dd>- Outside of my day to day duties as a developer I enjoy cycling and running (recently finished a 5k in <a href="https://www.jpmorganchasecc.com/results/search.php?city_id=4" target="_blank">under 20 minutes</a> - woohoo!), creating and playing <a href="https://w.soundcloud.com/player/?url=https://api.soundcloud.com/tracks/12810" target="_blank" id="sc" style="cursor:pointer">music</a>, learning new things, and generally expanding my <a href="https://i.pinimg.com/736x/05/d9/50/05d950ac03dffd4a9fdac537c08206ab--kapitán-jack-captain-jack.jpg" target="_blank">horizons</a>.</dd>
             </dl>
         </li>
- 
     </ul>
-    
     
     <p id="fin">
         <a href="https://manokhinv.github.io/" target="_blank">http://manokhinv.github.io</a> » resume<br>
