--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                     <div class="section-inner">
                         <h2 class="heading">About Me</h2>
                         <div class="content">
-                            <p>I am Vadim, an App Dev by day and an MSBA student by night at <a href="http://bab.sn/msba" target="_blank">Babson</a>. I am passionate about engineering, analytics, innovation, investments, and all things technology. I have a degree in Comp Sci and Applied Math from <a href="http://wit.edu" target="_blank">WIT</a>. I constantly strive to pair up my technical background with an entrepreneurial mindset to build something <a href="./25" class="undotted-link" style="color:#49515a">awe</a>some. Outside of my day to day duties I ride my bike, write and play <a class="sc">music</a>, read about FI/RE and investing, and generally try to expand my <a href="https://i.pinimg.com/736x/05/d9/50/05d950ac03dffd4a9fdac537c08206ab--kapitán-jack-captain-jack.jpg" class="undotted-link" style="color:#49515a">horizons</a>.</p>
+                            <p>I am Vadim, an App Developer by day and a Business Analytics grad student by night at <a href="http://bab.sn/msba" target="_blank">Babson</a>. I am passionate about engineering, analytics, innovation, investments, and all things technology. I have a degree in Computer Science and Applied Math from <a href="http://wit.edu" target="_blank">WIT</a> and an MBA from <a href="http://bab.sn/mba" target="_blank">Babson</a>. I constantly strive to pair up my technical background with an entrepreneurial mindset to build something <a href="./25" class="undotted-link" style="color:#49515a">awe</a>some. Outside of my day to day duties I ride my bike, write and play <a class="sc" style="coursor:pointer">music</a>, read about FI/RE and investing, and generally try to expand my <a href="https://i.pinimg.com/736x/05/d9/50/05d950ac03dffd4a9fdac537c08206ab--kapitán-jack-captain-jack.jpg" class="undotted-link" style="color:#49515a" target="_blank">horizons</a>.</p>
                         </div>
                     </div>                
                 </section>
@@ -150,7 +150,7 @@
                         <div class="content">                            
                             <div class="skillset">
                                 <div class="item">
-                                    <h3 class="level-title">ACF/FuseBox<span id="tt1" class="level-label" data-toggle="tooltip" data-placement="left" data-animation="true" title="Expert">Expert</span></h3>
+                                    <h3 class="level-title">Adobe ColdFusion/FuseBox<span id="tt1" class="level-label" data-toggle="tooltip" data-placement="left" data-animation="true" title="Expert">Expert</span></h3>
                                     <div class="level-bar">
                                         <div id="cont_tt1" class="level-bar-inner" data-level="85%" title="85%">
                                         </div>                                      
