--- a/resume.html
+++ b/resume.html
@@ -50,7 +50,7 @@
 
 <body>
     <h1>Vadim's Resume</h1>
-    <p>vm0339380 [at] gmail.com</p>
+    <p>manokhin.vadim [at] gmail.com</p>
     <p><a href="manokhin_resume.pdf" target="_blank">PDF</a></p>
     <h2>Summary</h2>
     <p>I am a Full Stack Application Developer with experience working as a UI, UX, &amp; QA engineer, systems administrator. Current career goals and objectives include designing and implementing enterprise-scale systems, minimizing costs and maximizing performance of software solutions, improving operational efficiency of organizations, learning new technologies to overcome business challenges, empowering and leading effective teams of engineers. Other professional interests include business intelligence and data analytics, automation, finance, and investing.</p>
