Becky's birthday site fixes.

--- a/becky/index.html
+++ b/becky/index.html
@@ -30,7 +30,7 @@
         <img src="assets/img/Balloon-Border.png" alt="bb2" width="100%" class="balloon-border2" />
         <div id="top_container"></div>
         <div id="music_control-container"><span id="music_control">Pause Music</span></div>
-        <div id="animation_control-container" align="center">Official Website That Celebrates Becky's 28th Birthday</div>
+        <div id="animation_control-container" align="center">Official Website for Becky's 28th Birthday</div>
         <div id="go-to-top">&#x25B4; Top</div>
         <div id="main">
             <div class="balloons text-center" id="b1"></div>
@@ -40,7 +40,7 @@
             <div class="balloons text-center" id="b5"></div>
             <div class="balloons text-center" id="b6"></div>
             <div class="balloons text-center" id="b7"></div>
-			<div id="photo" align="center" style="padding-top:110px;"><img style="border-radius: 70px;" src="assets/img/IMG_0480.JPG" alt="becca" width="145" height="180" /></div>
+			<div id="photo" align="center" style="padding-top:110px;width:150px;"><img style="border-radius: 70px;" src="assets/img/IMG_0480.JPG" alt="becca" /></div>
             <div id="neon_container">
                 <p><a id="tt" href="#a">IT'S&nbsp;&nbsp;&nbsp;BECKY'S&nbsp;&nbsp;&nbsp;BIRTHDAY!<br /><br />&#x21CA;&#x21CA;&#x21CA;</a><br /></p>
             </div>
@@ -49,11 +49,11 @@
             <div id="b">
                 <div id="putin-cell" align="center">
                     <div style="float:left">
-                        <img id="cat1" alt="cat1" src="http://i.imgur.com/JwbRHOy.gif" onClick="change_cat(this.id);" />
+                        <img id="cat1" alt="cat1" src="https://i.imgur.com/JwbRHOy.gif" onClick="change_cat(this.id);" />
                     </div>
-                    <img id="putya" alt="putya" src="http://i.imgur.com/7PvLrbp.jpg" style="border-radius:90px; cursor:pointer; z-index:1;" />
+                    <img id="putya" alt="putya" src="https://i.imgur.com/7PvLrbp.jpg" style="border-radius:90px; cursor:pointer; z-index:1;" />
                     <div style="float:right">
-                        <img id="cat2" alt="cat2" src="http://i.imgur.com/JwbRHOy.gif" onClick="change_cat(this.id);" />
+                        <img id="cat2" alt="cat2" src="https://i.imgur.com/JwbRHOy.gif" onClick="change_cat(this.id);" />
                     </div>
                 </div>
             </div>
@@ -67,11 +67,11 @@
                 Lil' pretty bae... with a very special soul!<br /></h3>
                 <h4><br />&#x1f382</h4>
                 <h4>We all know that deep inside you're just an 18 year old<br /><br />
-                with 10 years of experience adulting!<br /><br />Or a Quarter-Centurion with 3 years of experience!<sup>and ready for a promotion</sup><br /></h4>
+                with 10 years of experience adulting!<br /><br />Or a Quarter-Centurion with 3 years of experience<sup>and<sup>are<sup>ready for a promotion</sup></sup></</sup>!<br /></h4>
                 <h4><br />&#x1f382</h4>
-                <h2>Becky's turning twenty eight<br /><br />Time to take her on a date!<br /></h2>
+                <h2>Becky's turning twenty eight,<br /><br />Time to take her on a date!<br /></h2>
                 <h4><br />&#x1f382</h4>
-                <h4>Glad you make it out of <a href="https://en.wikipedia.org/wiki/27_Club" target="	_blank">The Forever 27 Club!</a><br /><br />
+                <h4>Glad you made it out of the <a href="https://en.wikipedia.org/wiki/27_Club" target="	_blank">Forever 27 Club</a>!<br /><br />
                 I don't think you would've liked the music there...<br /></h4>
                 <h4><br />&#x1f382</h4>
                 <h3><a href="https://translate.google.com/#auto/en/Rebekke dvadtsat' vosem' yeyo o vozraste ne sprosim!" target="_blank">Ребекке двадцать восемь её о возрасте не спросим!</a><br /><br /></h3>
@@ -119,15 +119,15 @@
                 Happy Birthday!<br /><br />&hearts;&nbsp;&#x1f382Ruski&nbsp;&#x1f382&hearts;</h2><br /><br /><br /><br />
             </div>   
             <div style="float:right;">
-                <img id="cat4" alt="cat4" src="https://media1.tenor.com/images/03fb298c0fcdc275bcfbc5a8cb5d4b3f/tenor.gif" onClick="change_cat(this.id);" />
+                <img id="cat4" alt="cat4" src="https://media0.giphy.com/media/PdKTOwHgOASGY/giphy.gif?cid=3640f6095c16c038446b4c5655ab9d1d" onClick="change_cat(this.id);" />
             </div>     		
             <div style="float:left;">
-                <img id="cat3" alt="cat3" src="https://media1.tenor.com/images/03fb298c0fcdc275bcfbc5a8cb5d4b3f/tenor.gif" onClick="change_cat(this.id);" />
+                <img id="cat3" alt="cat3" src="https://media0.giphy.com/media/PdKTOwHgOASGY/giphy.gif?cid=3640f6095c16c038446b4c5655ab9d1d" onClick="change_cat(this.id);" />
             </div>
             <div id="subtitle" color="red"><p align="center">December 19<sup>th</sup>, 2018<br /><br /><sup>Увидел ошибку - прими за улыбку :)</sup></p></div>
         </div>
     
-        <iframe id="soundcloud_widget" width="1" height="1" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/43857250&amp;auto_play=true&amp;hide_related=false&amp;show_comments=false&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
+        <iframe id="soundcloud_widget" width="1" height="1" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/43857250&amp;auto_play=false&amp;hide_related=false&amp;show_comments=false&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
     </div>
 </body>
 </html>
